k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aks-bpa
  labels:
    app.kubernetes.io/name: aks-bpa
    app.kubernetes.io/part-of: aks-bpa
